--------------------------------------------------------------------------------
 Fusion 1.214 - Sometime before we die
--------------------------------------------------------------------------------
- 02-05-05: Error proofed Default_Map and added framework for packet_db reading. [Tsusai]
- 02-04-05: fixed broadcast_handle and it's callers useage. [Tsusai]

--------------------------------------------------------------------------------
 Fusion 1.213 - January 28th, 2005
--------------------------------------------------------------------------------
- 01-25-05: Final preparation for 1.213 release. [AlexKreuz]
- 01-25-05: Gm Sprite Kill command errors if you don't have GM_KICK Power. [Tsusai]
- 01-24-05: Added GM Sprite's ability to kill things (Mob/NPC/Players). [Tsusai]
- 01-16-05: Fixed my mistake, only mobs (no npc/warp) loaded. [Tsusai]
- 01-16-05: Lack of script loading error handling causing crashes fixed. [Tsusai]
- 01-15-05: Bug #63. Storage increase ignored existing items. [AlexKreuz]
- 01-14-05: Removed weiss.ini's DefaultNPCID after research. [Tsusai]
- 01-14-05: Empty lines in inventory.txt caused crash. [AlexKreuz]
- 01-13-05: Option to uncap Firewall & Icewall (Set to 0). [AlexKreuz]
- 01-10-05: Fixed global npc broadcasting of plain blue messages. [Tsusai]
- 01-10-05: Uncapped #hcolor. [Tsusai]
- 01-07-05: Added Icewall Cap modifier to weiss.ini. [AlexKreuz]
- 01-07-05: Added Firewall Cap modifier to weiss.ini. [AlexKreuz]
- 01-06-05: Guild folders not in Int format caused crash on guildid retrieval. [AlexKreuz]
- 01-06-05: Readded support for set baselevel (hopefully improved). [Tsusai]
- 01-06-05: Bug tracing in retrieve_inventories. Missing data in "identify" column. [AlexKreuz]
- 01-06-05: Bug tracing in PD_Load_Accounts function. Loading ActiveChars fails (?). [AlexKreuz]
- 01-06-05: Bug tracing in DatabaseLoad function. Item can not be inserted into Item List. [AlexKreuz]